Update in polish translation.

--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -99,6 +99,8 @@ UserPrefShowLotsaOptions=Ilość opcji
 UserPrefLongFail=Tryb Fail`a
 UserPrefFlashyCombo=Błyskające Combo
 UserPrefGameplayFooter=Stopka Na Ekranie Gry
+UserPrefFancyUIBG=Ozdobne Tło Interfejsu
+UserPrefTimingDisplay=Wyświetlanie Timing`u
 
 [OptionExplanations]
 UserPrefAutoSetStyle=Pozwala grze jednoczesne wyświetlenie trybów dla dwóch graczy a nie tylko dla jednego. Wprowadzenie zmiany możne wymagać restartu Stepmanii (lub naciśnięcia klawisza Shift+F2)  
@@ -106,13 +108,14 @@ UserPrefNotePosition=Określa pozycje receptorów strzałek podczas gry.
 UserPrefComboOnRolls=Włącza naliczanie licznika Combo w sposób narastający dla strzałek typu ROLL.
 UserPrefComboUnderField=Określa czy wskaźnik Combo powinien być wyświetlany nad czy pod strzałkami.
 
-
 UserPrefGameplayShowScore=Wyświetla lub ukrywa licznik punktów podczas gry. 
 UserPrefGameplayShowStepsDisplay=Wyświetla lub ukrywa statystykę strzałek podczas gry.
 UserPrefShowLotsaOptions=Określa jak dużo modyfikatorów wyświetlić na ekranie opcji piosenki.  
 UserPrefLongFail=Określa długość czasu animacji ogrywanej po niezaliczanej piosence. Oryginalny z SM5 (Długi) , nowy (Krotki) 
 UserPrefFlashyCombo=Określa czy licznik Combo może błyskać czy nie.
 UserPrefGameplayFooter=Włączona opcja wyświetla, ograniczająca widoczność nadlatujących strzałek, stopkę u dołu ekranu. 
+UserPrefFancyUIBG=Zarządzanie wyświetlaniem ozdobnego tła interfejsu. Wyłączenie jest zalecane dla straszych komputerów. 
+UserPrefTimingDisplay=Wyświetlanie segementów z timingiem na pasku postępu piosenki podczas gry.
 
 ScoringType=Opcja pozwala na określenie metody naliczania punktacji.
 Speed=Regulacja prędkości nadlatujących strzałek.
