--- a/Themes/_Installer/Languages/es.ini
+++ b/Themes/_Installer/Languages/es.ini
@@ -27,8 +27,8 @@ TEXT_IO_REINSTALL=Reinstalar
 TEXT_IO_COULD_NOT_EXECUTE=No se pudo ejecutar $INSTDIR\Program\${PRODUCT_FAMILY}.exe
 
 [PreInstall]
-TEXT_IO_UNINSTALL_PREVIOUS=La version anterior de ${PRODUCT_ID} debe ser desinstalada antes de continuar.\n¿Desea continuar?
-TEXT_IO_DIRECTX_VISIT_MICROSOFT=Se recomienda la última versión de DirectX (8.1 o superior).\n¿Desea visitar el sitio web de Mircosoft ahora?
+TEXT_IO_UNINSTALL_PREVIOUS=La versión anterior de ${PRODUCT_ID} debe ser desinstalada antes de continuar.\n¿Desea continuar?
+TEXT_IO_DIRECTX_VISIT_MICROSOFT=Se recomienda la última versión de DirectX (8.1 o superior).\n¿Desea visitar el sitio web de Microsoft ahora?
 TEXT_IO_UNINSTALL_FAILED_INSTALL_ANYWAY=Falló la desinstalación. ¿Instalar de todas maneras?
 TEXT_IO_INSTALL_DIRECTX=Se requiere la última versión de DirectX (8.1 o superior).\n¿Desea instalar DirectX 8.1 ahora?
 TEXT_IO_FULL_INSTALL_NOT_FOUND=${PRODUCT_ID} no parece estar instalado.\n¿Desea continuar?
