if these end up getting translated as much longer strings and running into the values I'm going to scream. (issue 595)

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -86,6 +86,8 @@ LifeDifficulty=Life Difficulty: %s
 TimingDifficulty=Timing Difficulty: %s
 MachineRecord=Machine Record #%i!
 PersonalRecord=Personal Record #%i!
+ITG DP:=ITG DP:
+MIGS DP:=MIGS DP:
 
 [OptionTitles]
 UserPrefAutoSetStyle=Auto Set Style
