most displays are actually widescreen these days; fix up this comment

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -356,7 +356,7 @@ DelayedBack=If &oq;On&cq;, requires holding the Back button for 0.5 seconds to q
 DelayedTextureDelete=Set to ON hold textures in memory instead of freeing them.  This will eliminate the time needed to load the texture next from disk next time this is needed.  Do not set to ON unless you have 128MB of memory or more.
 Delete=
 Difficulty=
-DisplayAspectRatio=Change the width-to-height ratio of graphics in the game.  Most displays are 4:3.
+DisplayAspectRatio=Change the width-to-height ratio of graphics in the game. Most modern displays are either 16:9 or 16:10.
 DisplayColorDepth=Choose the color depth of the window. This option may not take effect in windowed mode.
 DisplayResolution=Choose the output resolution.  A higher resolution will show more detail, but requires a faster video card.
 EasterEggs=Enable or disable some special easter eggs.
