--- a/Themes/_fallback/Languages/es.ini
+++ b/Themes/_fallback/Languages/es.ini
@@ -358,7 +358,7 @@ DelayedBack=If &oq;On&cq;, requires holding the Back button for 0.5 seconds to q
 DelayedTextureDelete=Set to ON hold textures in memory instead of freeing them.  This will eliminate the time needed to load the texture next from disk next time this is needed.  Do not set to ON unless you have 128MB of memory or more.
 Delete=
 Difficulty=
-DisplayAspectRatio=Cambia la relación de aspecto de los gráficos del juego. La mayoría de pantallas son 4:3.
+DisplayAspectRatio=Cambia la relación de aspecto de los gráficos del juego. La mayoría de pantallas moderno son 16:9 o 16:10.
 DisplayColorDepth=Choose the color depth of the window. This option may not take effect in windowed mode.
 DisplayResolution=Elige la resolución del juego. Una resolución mayor mostrará más detalles pero requiere una tarjeta gráfica más potente.
 EasterEggs=Activa o desactiva algunos Huevos de Pascua.
