more localization for custom options lines

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -194,6 +194,12 @@ Explanation-Exit=Return to the title menu.
 
 [OptionNames]
 Custom=Special
+Many=Many
+Few=Few
+Normal=Normal
+Lower=Lower
+Short=Short
+Long=Long
 
 [ScreenTestInput]
 HelpText=Hold &BACK; or &START; to exit.
