Update in polish translation.

--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -191,7 +191,13 @@ Explanation-ReloadSongs=Ta czynność jest konieczna jeśli dodano/zmieniono/osu
 Explanation-Exit=Powrót do Ekranu Startowego.
 
 [OptionNames]
-Custom=Specjalny
+Custom=Specjalna
+Many=Duża
+Few=Mała
+Normal=Standardowe
+Lower=Obniżone
+Short=Krótki
+Long=Długi
 
 [ScreenTestInput]
 HelpText=Przytrzymaj &BACK; lub &START; aby wyjść.
