I'm not sure why it's asking for Tier17 but I want it to shut up.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -2058,6 +2058,16 @@ Tier08=D
 Failed=F
 None=
 
+Tier09=
+Tier10=
+Tier11=
+Tier12=
+Tier13=
+Tier14=
+Tier15=
+Tier16=
+Tier17=
+
 [ScreenOptionsEditCourse]
 -Empty-=-Empty-
 Song=Song
