New editor feature: Shift + F9/F10 for delays.
Works the same as stops really.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -2030,6 +2030,7 @@ Toggle assist tick=Toggle assist tick
 Next/prev steps of same StepsType=Next/prev steps of same StepsType
 Decrease/increase BPM at cur beat=Decrease/increase BPM at cur beat
 Decrease/increase stop at cur beat=Decrease/increase stop at cur beat
+Decrease/increase delay at cur beat=Decrease/increase delay at cur beat
 Decrease/increase music offset=Decrease/increase music offset
 Decrease/increase sample music start=Decrease/increase sample music start
 Decrease/increase sample music length=Decrease/increase sample music length
