--- a/Themes/default/Languages/es.ini
+++ b/Themes/default/Languages/es.ini
@@ -88,34 +88,34 @@ MachineRecord=Récord de esta máquina: %i
 PersonalRecord=Récord personal: %i
 
 [OptionTitles]
-UserPrefAutoSetStyle=Auto Set Style
-UserPrefNotePosition=Note Positions
-UserPrefComboOnRolls=Golpear incrementa el Combo
-UserPrefComboUnderField=Combo Under Field
+AutoSetStyle=Auto Set Style
+NotePosition=Note Positions
+ComboOnRolls=Golpear incrementa el Combo
+ComboUnderField=Combo Under Field
 
-UserPrefGameplayShowScore=Show Score
-UserPrefGameplayShowStepsDisplay=Show Steps
-UserPrefShowLotsaOptions=Options Density
-UserPrefLongFail=Tiempo de fallo
-UserPrefFlashyCombo=Flashy Combo
-UserPrefGameplayFooter=Gameplay Footer
-UserPrefFancyUIBG=Fancy UI Background
-UserPrefTimingDisplay=Timing Display
+GameplayShowScore=Show Score
+GameplayShowStepsDisplay=Show Steps
+ShowLotsaOptions=Options Density
+LongFail=Tiempo de fallo
+FlashyCombo=Flashy Combo
+GameplayFooter=Gameplay Footer
+FancyUIBG=Fancy UI Background
+TimingDisplay=Timing Display
 
 [OptionExplanations]
-UserPrefAutoSetStyle=Allow the game to list all one player and two player modes at once instead of one style only. This might require a restart of StepMania (or press Shift+F2).
-UserPrefNotePosition=Determines where the arrow receptors are placed in gameplay. 
-UserPrefComboOnRolls=Choose if rolls should increment the combo or not.
-UserPrefComboUnderField=Determine if the combo should display under the notes or not.
+AutoSetStyle=Allow the game to list all one player and two player modes at once instead of one style only. This might require a restart of StepMania (or press Shift+F2).
+NotePosition=Determines where the arrow receptors are placed in gameplay. 
+ComboOnRolls=Choose if rolls should increment the combo or not.
+ComboUnderField=Determine if the combo should display under the notes or not.
 
-UserPrefGameplayShowScore=Show or Hide the score display in gameplay.
-UserPrefGameplayShowStepsDisplay=Show or Hide the step information display in gameplay.
-UserPrefShowLotsaOptions=Choose how many lines/rows of options to choose from. &oq;Few&cq; keeps the list to a minimum. &oq;Many&cq; adds various show-off mods.
-UserPrefLongFail=Elige entre el fallo "Largo" original de sm-ssc o el "Corto" adoptado más tarde.
-UserPrefFlashyCombo=Determine if combo flashes should be shown or not.
-UserPrefGameplayFooter=If on, displays a footer that blocks visibility of incoming arrows for a certain region ( DDR's score frame ).
-UserPrefFancyUIBG=Toggles the fancy background. "Off" is recommended for older computers. Changes will take effect at the title screen.
-UserPrefTimingDisplay=Toggles the display of timing segments on the song progress meter.
+GameplayShowScore=Show or Hide the score display in gameplay.
+GameplayShowStepsDisplay=Show or Hide the step information display in gameplay.
+ShowLotsaOptions=Choose how many lines/rows of options to choose from. &oq;Few&cq; keeps the list to a minimum. &oq;Many&cq; adds various show-off mods.
+LongFail=Elige entre el fallo "Largo" original de sm-ssc o el "Corto" adoptado más tarde.
+FlashyCombo=Determine if combo flashes should be shown or not.
+GameplayFooter=If on, displays a footer that blocks visibility of incoming arrows for a certain region ( DDR's score frame ).
+FancyUIBG=Toggles the fancy background. "Off" is recommended for older computers. Changes will take effect at the title screen.
+TimingDisplay=Toggles the display of timing segments on the song progress meter.
 
 ScoringType=Defines which scoring method to use. If Special is selected, you can select a Special Scoring Mode in Theme Options.
 
