--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -265,17 +265,17 @@ Empty=- EMPTY -
 
 ArtistText=Artist
 BpmText=BPM
-ChallengeMeterText=Challenge Rank
-DoubleEasyMeterText=Easy Rank (Double)
-DoubleMediumMeterText=Medium Rank (Double)
-DoubleHardMeterText=Hard Rank (Double)
-DoubleChallengeMeterText=Challenge Rank (Double)
-EasyMeterText=Easy Rank
+ChallengeMeterText=Challenge Meter
+DoubleEasyMeterText=Easy Meter (Double)
+DoubleMediumMeterText=Medium Meter (Double)
+DoubleHardMeterText=Hard Meter (Double)
+DoubleChallengeMeterText=Challenge Meter (Double)
+EasyMeterText=Easy Meter
 GenreText=Genre
 GroupText=Group
-HardMeterText=Hard Rank
+HardMeterText=Hard Meter
 LengthText=Length
-MediumMeterText=Medium Rank
+MediumMeterText=Medium Meter
 PopularityText=Player's Best!
 PreferredText=Preferred
 TitleText=Title
