make course use songs we have, add back experimental customdifficulties;

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -64,7 +64,11 @@ Routine=Routine
 Freestyle=Freestyle
 Crazy=Crazy
 Nightmare=Nightmare
-HalfDouble=Half-Double
+# Pump Half-Double
+HalfDoubleEasy=Half-Double
+HalfDoubleMedium=Half-Double
+HalfDoubleHard=Half-Double
+HalfDoubleExpert=Half-Double
 
 [CourseDifficulty]
 Beginner=Novice
