change the UserPref names/explanations to match the new format

--- a/Themes/default/Languages/ja.ini
+++ b/Themes/default/Languages/ja.ini
@@ -90,36 +90,34 @@ MachineRecord=筐体中#%i位!
 PersonalRecord=セルフレコード#%i位!
 
 [OptionTitles]
-UserPrefAutoSetStyle=プレイスタイルの\n全選択可能化
-UserPrefNotePosition=シーケンスの位置
-UserPrefComboOnRolls=ロールの判定
-UserPrefComboUnderField=コンボを低めの\nレイヤーに表示する
+AutoSetStyle=プレイスタイルの\n全選択可能化
+NotePosition=シーケンスの位置
+ComboOnRolls=ロールの判定
+ComboUnderField=コンボを低めの\nレイヤーに表示する
 
-
-
-UserPrefGameplayShowScore=スコア表示
-UserPrefGameplayShowStepsDisplay=シーケンス表示
-UserPrefShowLotsaOptions=プレイオプション\nの個数
-UserPrefLongFail=プレイ失敗の演出
-UserPrefFlashyCombo=50コンボの演出
+GameplayShowScore=スコア表示
+GameplayShowStepsDisplay=シーケンス表示
+ShowLotsaOptions=プレイオプション\nの個数
+LongFail=プレイ失敗の演出
+FlashyCombo=50コンボの演出
 UserPrefThemes=テーマ
-UserPrefGameplayFooter=ゲーム中の\nオプション表示欄
-UserPrefFancyUIBG=背景の特殊\nオブジェクト
-UserPrefTimingDisplay=曲位置メーターの\n区切り
+GameplayFooter=ゲーム中の\nオプション表示欄
+FancyUIBG=背景の特殊\nオブジェクト
+TimingDisplay=曲位置メーターの\n区切り
 
 [OptionExplanations]
-UserPrefAutoSetStyle=プレイヤー人数に関わらずすべての\nプレイスタイルが選択できるようになります。(要再起動)
-UserPrefNotePosition=プレイ中の判定ゾーンの位置を決めます。
-UserPrefComboOnRolls=ロールでコンボが増加するかどうかを決めます。
-UserPrefComboUnderField=コンボをシーケンスの下に表示するかどうかを決めます。
+AutoSetStyle=プレイヤー人数に関わらずすべての\nプレイスタイルが選択できるようになります。(要再起動)
+NotePosition=プレイ中の判定ゾーンの位置を決めます。
+ComboOnRolls=ロールでコンボが増加するかどうかを決めます。
+ComboUnderField=コンボをシーケンスの下に表示するかどうかを決めます。
 
-UserPrefGameplayShowScore=プレイ中スコアを表示するかどうかを決めます。
-UserPrefGameplayShowStepsDisplay=曲選択中にシーケンス情報を表示するかどうかを決めます。
-UserPrefShowLotsaOptions=選択可能なプレイオプションを&oq;Few&cq;で最低限に、\n&oq;Many&cq;で最大限に表示します。
-UserPrefLongFail=プレイに失敗したときの演出の長さを決めます。
-UserPrefFlashyCombo=50コンボで発生する演出を表示するかどうかを決めます。
-UserPrefGameplayFooter=ONにすると、プレイ中に上か下かに画像が表示されます。\nオプションなどは見やすくなりますが、その分シーケンスが隠されます。
-UserPrefFancyUIBG=特殊な背景エフェクトの使用可否の設定です。\n古いパソコンでは"Off"に設定してください。
+GameplayShowScore=プレイ中スコアを表示するかどうかを決めます。
+GameplayShowStepsDisplay=曲選択中にシーケンス情報を表示するかどうかを決めます。
+ShowLotsaOptions=選択可能なプレイオプションを&oq;Few&cq;で最低限に、\n&oq;Many&cq;で最大限に表示します。
+LongFail=プレイに失敗したときの演出の長さを決めます。
+FlashyCombo=50コンボで発生する演出を表示するかどうかを決めます。
+GameplayFooter=ONにすると、プレイ中に上か下かに画像が表示されます。\nオプションなどは見やすくなりますが、その分シーケンスが隠されます。
+FancyUIBG=特殊な背景エフェクトの使用可否の設定です。\n古いパソコンでは"Off"に設定してください。
 
 UserPrefLanguage=使用言語を設定します。現在は「日本語」です。
 UserPrefAnnouncer=プレイ中のアナウンサーを選択します。専用ファイルの追加が必要です。
