--- a/Themes/_fallback/Languages/ja.ini
+++ b/Themes/_fallback/Languages/ja.ini
@@ -1,24 +1,24 @@
-﻿;Stepmania 5.0系本体用　_fallbackテーマ日本語化ファイルVer 1.05α
+﻿;Stepmania 5.0系本体用　_fallbackテーマ日本語化ファイルVer 1.05β
 
 [Common]
 WindowTitle=StepMania
 StepMania=StepMania
 
 [LoadingWindow]
-Couldn't open any loading windows.=Couldn't open any loading windows.
-Starting sound subsystem...=Starting sound subsystem...
-Initializing bookkeeper...=Initializing bookkeeper...
-Starting lights subsystem...=Starting lights subsystem...
-Loading game type...=Loading game type...
-Building song cache index...=Building song cache index...
-Loading banner cache...=Loading banner cache...
-Initializing memory card system...=Initializing memory card system...
-Initializing character system...=Initializing character system...
-Initializing profile system...=Initializing profile system...
-Updating popular song list...=Updating popular song list...
-Updating course rankings...=Updating course rankings...
-Initializing statics manager...=Initializing statics manager...
-Initializing message system...=Initializing message system...
+Couldn't open any loading windows.=読み込みウインドウが開けませんでした。
+Starting sound subsystem...=音声システム開始
+Initializing bookkeeper...=クレジット記録初期化中
+Starting lights subsystem...=サイドライト初期化中
+Loading game type...=ゲーム読み込み中
+Building song cache index...=譜面データベース生成中
+Loading banner cache...=バナー画像キャッシュ中
+Initializing memory card system...=メモリーカードポート初期化中
+Initializing character system...=フォント読み込み中
+Initializing profile system...=プロフィール読み込み中
+Updating popular song list...=人気曲リスト更新中
+Updating course rankings...=コースランキング更新中
+Initializing statics manager...=スタティックマネージャー初期化中
+Initializing message system...=メッセージシステム初期化中
 
 [Arch]
 Couldn't create a movie driver.=動画ドライバの生成に失敗しました。
@@ -2026,7 +2026,7 @@ Toggle assist tick=アシストチックを使う
 Next/prev steps of same StepsType=同じタイプの違うシーケンス
 Decrease/increase BPM at cur beat=BPMの調整
 Decrease/increase stop at cur beat=譜面停止時間の調整
-Decrease/increase BPM at cur beat=譜面遅延時間の調整
+Decrease/increase delay at cur beat=譜面遅延時間の調整
 Decrease/increase music offset=オフセットの調整
 Decrease/increase sample music start=試聴曲スタートの調整
 Decrease/increase sample music length=試聴曲の長さの調整
