New branch: [editorKeysounds]
Let's allow modifying keysounds in the editor.

First, start with some strings we'll need.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1369,6 +1369,10 @@ Help=Help
 Info=Info
 Routine Player=Player
 
+Track %d=Track %d
+None=None
+New Sound=New Sound
+
 [ScreenEditMenu]
 HeaderText=Edit Song/Steps
 HeaderSubText=Make your songs perfect
