[editorKeysounds] Case sensitivity.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -971,7 +971,7 @@ Min BPM=Min Specified BPM
 Mines=Mines
 Mirror Player 1 to 2=Mirror P1's notes to P2 (routine only)
 Mirror Player 2 to 1=Mirror P2's notes to P1 (routine only)
-Modify keysounds at current beat=Modify keysounds at current beat
+Modify Keysounds at current beat=Modify keysounds at current beat
 MoveRandomToEnd=Random At&nbsp;End
 More Options=More Options
 MovieColorDepth=Movie Color
