[editorKeysounds] Can add KS, but...
1) A physical note is shown in the editor.
We do need a separate graphic for auto keysounds.
2) The keysound only plays if you "hit" the note.
Auto keysound notes should play regardless of hit or miss.

Time to make this branch public.
Anyone want to help tackle this?

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1373,6 +1373,7 @@ Routine Player=Player
 Track %d=Track %d
 None=None
 New Sound=New Sound
+Enter New Keysound File=Enter the name of the new keysound file.\nPlease make sure it is spelt right.
 
 [ScreenEditMenu]
 HeaderText=Edit Song/Steps
