--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1021,6 +1021,7 @@ RefreshRate=Refresh Rate
 Reload Songs=Reload Songs/Courses
 Remove=Remove
 Remove Change=Remove Change
+Remove Keysound=Remove Keysound
 Rename=Rename
 Reset To Defaults=Reset Options To Default Values
 Revert from disk=Revert from disk
