--- a/Themes/default/Languages/ja.ini
+++ b/Themes/default/Languages/ja.ini
@@ -1,4 +1,4 @@
-﻿;Stepmania 5.0系本体default用日本語化ファイル　Ver 1.03β
+﻿;Stepmania 5.0系本体default用日本語化ファイル　Ver 1.03γ
 
 [Screen]
 HelpText=&BACK; 戻る &START; 決定 &SELECT; オプション &MENULEFT;&MENURIGHT;&MENUUP;&MENUDOWN; 選択
@@ -48,13 +48,15 @@ HelpText=&BACK; 戻る &START; 決定 / 参加 &MENULEFT;&MENURIGHT; 選択
 
 [ScreenSelectPlayMode]
 HelpText=&BACK; 戻る &START; 決定 / 参加 &MENULEFT;&MENURIGHT; 選択
+
 EasyExplanation=初心者向けのモードです。まずはプレイしてみよう。
-HardExplanation=上級者向けのモードです。音感冴えわたるあなたに。
 OldNormalExplanation=中級者向けのモードです。十分に慣れてきたならこちら。
+HardExplanation=上級者向けのモードです。音感冴えわたるあなたに。
+
 NormalExplanation=1曲ずつ選択してプレイするモードです。
 RaveExplanation=対戦モードです。相手の邪魔にめげずノリ続けてください。
 NonstopExplanation=何曲かを連続してプレイするモードです。
-OniExplanation=シーケンス処理力を問う、オプションが使用できないコースです。
+OniExplanation=譜面処理力を問う、オプションが使用できないコースです。
 EndlessExplanation=ゲージが尽きるまで、ひたすらプレイするモードです。
 
 [ScreenSelectPlayStyle]
@@ -68,7 +70,7 @@ NEW!=NEW!
 Press Start For Options=&START;でプレイオプション選択画面へ
 Entering Options=プレイオプション選択
 HelpText=&BACK; 戻る &START; 選択 / 参加 &SELECT; パスコード &MENULEFT;&MENURIGHT; 選択::&UP;&DOWN;&UP;&DOWN; ソート画面呼び出し
-AlternateHelpText=&SELECT;+&MENULEFT;&MENURIGHT; シーケンス難度変更 &SELECT;+&START; クイックソート
+AlternateHelpText=&SELECT;+&MENULEFT;&MENURIGHT; 譜面難度変更 &SELECT;+&START; クイックソート
 
 [ScreenSelectCourse]
 HelpText=&BACK; 戻る &START; 決定 / 参加 &SELECT; パスコード &MENULEFT;&MENURIGHT; 選択::&UP;&DOWN;&UP;&DOWN; ソート画面呼び出し
@@ -86,83 +88,80 @@ HelpText=
 HelpText=&BACK; 戻る &START; Move On &MENULEFT;+&MENURIGHT; or &SELECT; スクリーンショット
 LifeDifficulty=ゲージの厳しさ: %s
 TimingDifficulty=判定の厳しさ: %s
-MachineRecord=筐体中#%i位!
-PersonalRecord=セルフレコード#%i位!
+MachineRecord=筐体中 %i位!
+PersonalRecord=セルフレコード %i位!
 
 [OptionTitles]
-AutoSetStyle=プレイスタイルの\n全選択可能化
-NotePosition=シーケンスの位置
+AutoSetStyle=プレイスタイル\n選択の省略
 ComboOnRolls=ロールの判定
-ComboUnderField=コンボを低めの\nレイヤーに表示する
-
-GameplayShowScore=スコア表示
-GameplayShowStepsDisplay=シーケンス表示
-ShowLotsaOptions=プレイオプション\nの個数
-LongFail=プレイ失敗の演出
+ComboUnderField=コンボ表示の\n優先度
+FancyUIBG=背景の追加\nオブジェクト
 FlashyCombo=50コンボの演出
-UserPrefThemes=テーマ
-GameplayFooter=ゲーム中の\nオプション表示欄
-FancyUIBG=背景の特殊\nオブジェクト
+GameplayFooter=フッター表示
+GameplayShowScore=スコア表示
+GameplayShowStepsDisplay=譜面表示
+LongFail=プレイ失敗時の\n動作
+NotePosition=譜面の位置
+ShowLotsaOptions=プレイオプション\nの個数
 TimingDisplay=曲位置メーターの\n区切り
+UserPrefThemes=テーマ
 
 [OptionExplanations]
-AutoSetStyle=プレイヤー人数に関わらずすべての\nプレイスタイルが選択できるようになります。(要再起動)
-NotePosition=プレイ中の判定ゾーンの位置を決めます。
-ComboOnRolls=ロールでコンボが増加するかどうかを決めます。
-ComboUnderField=コンボをシーケンスの下に表示するかどうかを決めます。
-
-GameplayShowScore=プレイ中スコアを表示するかどうかを決めます。
-GameplayShowStepsDisplay=曲選択中にシーケンス情報を表示するかどうかを決めます。
-ShowLotsaOptions=選択可能なプレイオプションを&oq;Few&cq;で最低限に、\n&oq;Many&cq;で最大限に表示します。
-LongFail=プレイに失敗したときの演出の長さを決めます。
-FlashyCombo=50コンボで発生する演出を表示するかどうかを決めます。
-GameplayFooter=ONにすると、プレイ中に上か下かに画像が表示されます。\nオプションなどは見やすくなりますが、その分シーケンスが隠されます。
-FancyUIBG=特殊な背景エフェクトの使用可否の設定です。\n古いパソコンでは"Off"に設定してください。
-
-Language=使用言語を設定します。現在は「日本語」です。
 Announcer=プレイ中のアナウンサーを選択します。専用ファイルの追加が必要です。
-Theme=使用するテーマを設定します。必ずStepmania 5用のテーマを選択してください。
-PercentageScoring=スコアをパーセント表示します。
-Mode=背景の設定です。Off以外では専用ファイルを用意する必要があります。
-Brightness=背景の明度を設定します。
-DancingCharacters=ダンサーの表示設定です。\n専用ファイルがない場合、無視してかまいません。
+AutoSetStyle=ゲームスタート後のスタイル選択を省略し、ミュージックホイールで\n全スタイルの全難易度が\n選択できるようになります。(要再起動)
 BeginnerHelper=Onにしてかつ専用ファイルが存在すると、\n難易度Beginnerでダンサーがお手本を見せてくれます。
-RandomBackGrounds=ランダム背景使用時、常に同時に読み込む画像数を設定します。
-
+Brightness=背景の明度を設定します。
+NotePosition=プレイ中の判定ゾーンの位置を設定します。。
 Center1Player=Onにすると、1人プレイ時に\n判定ゾーンとシーケンスが中央寄りになります。
+ComboOnRolls=ロールでコンボが増加するかどうかを設定します。
+ComboUnderField=「Yes」にするとオブジェがコンボ表示の\n上を通過するようになります。
+DancingCharacters=ダンサーの表示設定です。\n専用ファイルがない場合、無視してかまいません。
+FancyUIBG=Onにするとテーマ中の画像エフェクトが有効になります。\n古いパソコンでは"Off"に設定してください。
+FlashyCombo=50コンボで発生する演出を表示するかどうかを決めます。
+GameplayFooter=ONにすると、プレイ中に上か下かに黒い帯が表示されます。\n使用中の設定などは見やすくなりますが、その分譜面が隠されます。
+GameplayShowScore=プレイ中スコアを表示するかどうかを設定します。
+GameplayShowStepsDisplay=曲選択中に譜面情報を表示するかどうかを設定します。
+Language=使用言語を設定します。現在は「日本語」です。
+LongFail=プレイに失敗したときの演出の長さを決めます。
+Theme=使用するテーマを設定します。動作するのはStepmania5系用のテーマ、\nまたはStepmania4 alphaのテーマを\nportkit-sm4を利用して移植したものです。
+MenuTimer=Onにすると選択するシーンに時間制限が付きます。
+Mode=背景の設定です。Off以外では専用ファイルを用意する必要があります。
 OniScoreDisplay=ONIモードでのスコア表示形式を設定します。
-MenuTimer=Onにすると選択に時間制限が付きます。
-
+PercentageScoring=スコアの代わりに譜面のクリア率をパーセントで表示します。
+RandomBackGrounds=ランダム背景使用時、1ステージで使用する画像数を設定します。
+ShowLotsaOptions=選択可能なプレイオプションを&oq;Few&cq;で最低限に、\n&oq;Many&cq;で最大限に表示します。
 TimingDisplay=Onにすると、曲の現在位置を示すメーターが区切られます。
 
 
 ;以下プレイオプション
-Accel=譜面の判定ゾーンへの接近のしかたを設定します。
-Appearance=シーケンスの出現のしかたを設定します。\n「Hidden」は途中から消え、「Sudden」は途中から現れます。\n「Stealth」は常に消え、「Blink」は常に点滅します。
-AutoAdjust=曲の再生ズレ補正の設定です。「はまり」を起こしやすい曲では使わないでください。
+Accel=オブジェの判定ゾーンへの接近のしかたを設定します。「Boost」は加速、「Brake」は減速します。\n「Wave」はオブジェが揺れ、「Expand」はオブジェがふわりと動きます。\n「Boomerang」はオブジェが判定ゾーンの逆から現れ、再び判定ゾーンに向かいます。
+Appearance=オブジェの出現のしかたを設定します。\n「Hidden」は途中から消え、「Sudden」は途中から現れます。\n「Stealth」は常に消え、「Blink」は常に点滅します。
+AutoAdjust=曲の再生ズレ補正をします。「Sync&nbsp;Song」で曲のオフセットを、\n「Sync&nbsp;Machine」でグローバルオフセットを、「Sync&nbsp;Tempo」で曲のBPM変化を調節します。\nなおあまりにズレが大きい曲、および総オブジェ数が24以下の曲は補正できません。
 Assist=リズムキープ用の補助音の設定をします。
 BackGround=背景を設定します。「Random Background」はランダム背景用ファイルが必要です。
-BarDrain=ライフゲージの減り方を設定します。
+BarDrain=ライフゲージの減り方を設定します。\n「No&nbsp;Recover」でゲージが回復しなくなります。\n「Sudden&nbsp;Death」では一度でもミスをするとゲームオーバーになります。
 BatLives=ライフバッテリーの数を設定します。
 Characters=CGキャラクターを選択します。
 DefaultFailType=ゲームオーバーの設定をします。
+EffectsArrow=「Drunk」でレーンが揺らぎ、「Dizzy」でオブジェが回転します。「Twirl」で画面の垂直方向に、\n「Roll」で鉛直方向に回転します。「Beat」は一拍ごとにレーンが振動し、「Tipsy」でレーンが上下に\n揺らぎます。「Tornado」でレーンがねじれ、「Bumpy」でオブジェに落ち着きがなくなります。
+EffectsReceptor=オブジェと判定ゾーンの特殊表示です。「Confusion」で回転します。「Invert」で反時計回りに90度、\n「Flip」で180度回転します。「Mini」で表示が小さく、「Big」で大きくなります。\n「Xmode」でレーンが斜めになります。
 Handicap=オブジェを削除する規則を設定します。OFF以外ではハイスコアを出しても記録されません。
-Hide=判定ゾーンの表示を設定します。
+Hide=画面要素の表示の設定です。「Dark」で判定ゾーンは表示されなくなります。\n「Blind」でコンボ表示がされなくなります。「Cover」は「Blind」から判定表示を復活させたものです。
 Holds=通常オブジェをホールドに変更する規則を設定します。
 Insert=譜面にオブジェを追加する規則を設定します。
 LifeType=ライフ形式を選択します。「Bar」は回復しますが、「Battery」は回復しません。
 Mines=譜面に地雷を追加する規則を設定します。
 MusicRateHelp=曲そのものを変速してプレイします。
 NoteSkins=オブジェのスキンを変更します。必ずプレイモードに対応したスキンを使用してください。
-Persp=譜面の流れ方の立体感を設定します。通常は「Overhead」です。
+Persp=譜面の流れ方の立体感を設定します。通常は「Overhead」です。\n「Incoming」は判定ゾーンが手前に、「Space」は奥に配置されます。
 ProTiming=「On」にすると、ジャストタイミングからの入力の離れを表示するようになります。
 PlayerAutoPlay=OnにするとCPUが代わりにプレイします。スコアは加算も集計もされません。
 Rate=曲自体の速度の設定をします。「Haste」では微小な加減速を行い続けます。
-Remove=シーケンスからオブジェを削除する規則を設定します。
+Remove=譜面からオブジェを削除する規則を設定します。
 SaveScores=スコア保存の設定をします。
 SaveToProfileHelp=プレイ結果を保存するプロファイル及びメモリーカードを設定します。
 ScoreDisplay=スコアの表示形式を設定します。
-Scroll=シーケンスのスクロール方向を設定します。
+Scroll=シーケンスのスクロール方向を設定します。「Reverse」は上から下、「Split」は右半分だけが上から下、\n「Alternate」は左から偶数番目が上から下、「Cross」は中央が上から下に流れます。\n「Centered」は判定ゾーンが縦方向の中心に移動します。
 Speed=譜面の流れる速度を調整します。\n「x」は速度をその数値倍、「C」は速度をそのBPMに対応した速度で固定、\n「m」は最大速度をそのBPMに対応した速度に抑制します。
 Steps=譜面難易度を選択します。
 Turn=譜面を変形する規則を設定します。\n「Mirror」は180度、「Left」は90度左、「Right」は90度右、\n「Shuffle」「Soft　Shuffle」「Cement　Mixer」はそれぞれ規則の違うランダムです。
