--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -28,7 +28,7 @@ DoublesPremiumSecondary=Play doubles for one credit!
 
 [ScreenDemonstration]
 Demonstration=Demonstration
-%s - %s   [from %s]=%s - %s   [from %s]
+%s - %s   [from %s]=%s - %s\n[from %s]
 
 [ScreenQuickSetupOverview]
 Explanation=Quick Setup provides a easy way to set commonly-changed and useful preferences.
