updated japanese language

--- a/Themes/_fallback/Languages/ja.ini
+++ b/Themes/_fallback/Languages/ja.ini
@@ -1,4 +1,4 @@
-﻿;Stepmania 5.0系本体用　_fallbackテーマ日本語化ファイルVer 1.05γ
+﻿;Stepmania 5.0系本体用　_fallbackテーマ日本語化ファイルVer 1.06-A
 
 [Common]
 WindowTitle=StepMania
@@ -965,6 +965,7 @@ Min BPM=最小(表示)BPM
 Mines=地雷
 Mirror Player 1 to 2=1Pのノートを2Pにミラー
 Mirror Player 2 to 1=2Pのノートを1Pにミラー
+Modify Keysounds at current beat=オブジェにキー音をアサインする
 MoveRandomToEnd=最後までランダム
 More Options=詳細オプション
 MovieColorDepth=ムービーの\n有効色数
@@ -1112,6 +1113,8 @@ Shuffle=シャッフル
 GamePrefDefaultFail=曲の終了
 #
 UserPrefScoringMode=スコアの計算方式
+
+
 [PaneDisplay]
 Steps=オブジェ
 Holds=ホールド
@@ -1362,6 +1365,12 @@ Preview Length=試聴の長さ
 Help=ヘルプ
 Info=情報
 Routine Player=ルーチンプレイヤー
+
+Track %d=(左から) %dレーン目のアサイン
+None=無し
+New Sound=新規にアサイン
+Enter New Keysound File=キー音ファイルの名前を入力してください。\n特に長いファイルネームを間違わないようにしてください。
+
 
 [ScreenEditMenu]
 HeaderText=譜面の編集
@@ -1719,11 +1728,11 @@ Setup=クイックセットアップ
 Error adding file '%s'.=「%s」の追加でエラーが発生しました。
 
 [SongManager]
-Loading courses...=コース読み込み中…
-Loading songs...=曲読み込み中…
-Reloading...=リロード中…
-Unloading songs...=ロード解除中…
-Unloading courses...=ロード解除中……
+Loading courses...=コース読み込み中
+Loading songs...=曲読み込み中
+Reloading...=リロード中
+Unloading songs...=ロード解除中
+Unloading courses...=ロード解除中
 The folder "%s" appears to be a song folder.  All song folders must reside in a group folder.  For example, "Songs/Originals/My Song".=「%s」は曲フォルダです。曲フォルダはグループフォルダの中に配置してください。
 
 [SongUtil]
