more changes to hello world

--- a/Themes/HelloWorld/Languages/en.ini
+++ b/Themes/HelloWorld/Languages/en.ini
@@ -35,7 +35,7 @@ CharactersDesc=Three-dimensional characters dancing in Gameplay. Modeling skills
 
 [ScreenReferenceMain]
 Header=Reference
-Explanation=This section contains reference material. It is meant for themers who already know what they are looking for.
+Explanation=This section contains reference material. It is meant for themers who have some idea of what they are looking for.
 
 Screens=Screens
 ScreensDesc=A reference of all of StepMania 5's available screens.
@@ -45,3 +45,19 @@ Classes=Classes
 ClassesDesc=The classes that make up some of your favorite elements.
 LuaRef=Lua Reference
 LuaRefDesc=Visit the StepMania 5 Lua reference online.
+
+[ReferenceScreens]
+Header=Screen Reference
+Explanation=This is a list of Screens defined in StepMania's code.
+
+Screen=Screen
+ScreenDesc=The base Screen class that every other screen derives from.
+
+Overlays=Screen Overlays
+OverlaysDesc=Overlays that are handled regardless of screen.
+
+SWME=ScreenWithMenuElements
+SWMEDesc=A screen with menu elements. Most other screens are derived from this class.
+
+Options=ScreenOptions
+OptionsDesc=An options screen with various rows.
