Small corretion in Polish translation.

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -1209,7 +1209,7 @@ HeaderText=Wygląd
 HeaderSubText=Dostosuj grę pod siebie
 
 [ScreenOptionsGraphicsSound]
-HeaderText=Grafika / Dzwięk
+HeaderText=Grafika / Dźwięk
 HeaderSubText=Ustaw najlepszą wydajność
 
 [ScreenOptionsAdvanced]
