change ScreenMapControllers warning to use strings instead

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1447,6 +1447,8 @@ BodyText=The StepMania program source code is licensed under a permissive open-s
 HeaderText=Map Controllers
 InvalidButton=That key can not be mapped.
 %s slots=%s slots
+WarningHeader=WARNING!
+WarningText=Please ensure that you do not overwrite any important keymappings, such as:\n&MENULEFT; LEFT &MENURIGHT; RIGHT &MENUUP; UP &MENUDOWN; DOWN &START; START &BACK; BACK or &SELECT; SELECT. Do not apply keymappings that you do not know the function of or unmap important keys!
 
 [ScreenMapControllers2]
 Add Mapping=Add Mapping
