update in Polish translation

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -1432,6 +1432,11 @@ BodyText=Kod źródłowy programu Stepmania jest objęty licencją open-source\n
 HeaderText=Mapowanie Kontrolerów
 InvalidButton=Ten klawisz nie może zostać zmapowany
 %s slots=Strona gracza %s
+WarningHeader=UWAGA!
+WarningText=Upewnij się że nie nadpiszesz żadnych ważnych\n powiązań do klawiszy klawiatury, takich jak:\n&MENULEFT; LEWO &MENURIGHT; PRAWO &MENUUP; GÓRA &MENUDOWN; DÓŁ &START; START &BACK; COFNIJ lub &SELECT; WYBIERZ. Nie ustawiaj lub nie odmapuj skrótów do ważnych klawiszy!
+
+[ScreenMapControllers2]
+Add Mapping=Dodaj Mapowanie
 
 [ScreenNetRoom]
 Enter a description for the room:=Utwórz opis pokoju:
