going on a string localization rampage in the default theme. aside from graphics, this should be the last of the non-themeable text that actually matters (unless someone really has to change 'P1'/'P2' on the DifficultyList cursors...)

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -74,6 +74,7 @@ HelpText=&BACK; Exit &START; Select / Join &SELECT; Magic Codes &MENULEFT;&MENUR
 
 [ScreenOptions]
 HelpText=&BACK; Exit &START; Choose &SELECT; Go Up &MENULEFT;&MENURIGHT;&MENUUP;&MENUDOWN; Move
+Disqualified=Score will be disqualified!
 
 [ScreenStageInformation]
 HelpText=
@@ -218,3 +219,16 @@ V=V
 A=A
 F=F
 C=C
+
+[ScreenMapControllers]
+Exit=Exit
+
+[ScreenGameOver]
+GAME OVER=GAME OVER
+Play again soon!=Play again soon!
+
+[ScreenHowToPlay]
+How To Play StepMania=How To Play StepMania
+
+[Protiming]
+MS=MS
