Update in Polish translation.

--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -28,6 +28,7 @@ DoublesPremiumSecondary=Graj w trybie Double za jeden kredyt!
 
 [ScreenDemonstration]
 Demonstration=Demonstracja
+%s - %s   [from %s]=%s - %s\n[od %s]
 
 [ScreenQuickSetupOverview]
 Explanation=Podstawowe ustawienia umożliwiają szybkie skonfigurowanie najczęściej używanych opcji
@@ -73,6 +74,7 @@ HelpText=&BACK; Wyjście &START; Zatwierdź / Dołącz &SELECT; Magiczne kody &M
 
 [ScreenOptions]
 HelpText=&BACK; Wyjście &START; Zatwierdź &MENULEFT;&MENURIGHT;&MENUUP;&MENUDOWN; Wybierz
+Disqualified=Wynik nie zostanie uznany!
 
 [ScreenStageInformation]
 HelpText=
@@ -86,6 +88,8 @@ LifeDifficulty=Zużycie energii: %s
 TimingDifficulty=Ocena trafień: %s
 MachineRecord=Rekord Maszyny #%i!
 PersonalRecord=Rekord Życiowy #%i!
+ITG DP:=ITG DP:
+MIGS DP:=MIGS DP:
 
 [OptionTitles]
 AutoSetStyle=Automatycznie Ustaw Styl
@@ -118,6 +122,7 @@ FancyUIBG=Zarządzanie wyświetlaniem ozdobnego tła interfejsu. Wyłączenie je
 TimingDisplay=Wyświetlanie segementów z timingiem na pasku postępu piosenki podczas gry.
 
 ScoringType=Opcja pozwala na określenie metody naliczania punktacji.
+
 Speed=Regulacja prędkości nadlatujących strzałek.
 Accel=Zmiana ścieżki trasy która lecą strzałki.
 Effect=Zmiana rozmiaru lub rodzaju ruchu strzałek lub ich receptorów/celów.
@@ -131,14 +136,13 @@ ScoreDisplay=Zmiana sposobu wyświetlania punktacji.
 ProTiming=Zmiana sposobu wyświetlania dokładności trafienia w strzałkę.
 Scroll=Modyfikacje kierunku ruchu strzałek.
 NoteSkins=Wybór wyglądu grafiki strzałek/nut.
-Remove=Usuwanie strzałek ze stepchart`a. Opcje ułatwiające ukończenie piosenki. Użycie dyskwalifikuje z rankingu.
+Handicap=Usuwanie strzałek ze stepchart`a. Opcje ułatwiające ukończenie piosenki. Użycie dyskwalifikuje z rankingu.
 Hide=Modyfikacja widoczności receptorów/strzałek celu
 Persp=Tryby widoku nadlatujących strzałek.
 Steps=Ustawienie poziomu trudności piosenki.
 Characters=Wybór modelu tańczącej postaci w tle.
 SaveToProfileHelp=Wymaga włączonego profilu, karty pamięci lub pendrive`a.
 MusicRateHelp=Prędkość odtwarzania muzyki.
-Attacks=Określa czy podczas gry będą użyte, nie będące częścią Maratonu, zdefiniowane w piosence, Ataki Modyfikatorowe. 
 
 [StepsListDisplayRow StepsType]
 Dance_Single=4
@@ -183,7 +187,6 @@ Importing Songs=Importowanie piosenek z zainstalowanych wcześniej wersji Stepma
 Reload Songs=Przeładowanie Piosenek
 Exit=Powrót do Ekranu Startowego
 
-
 Explanation-WhereToFind=Uruchamia stronę www z informacja miejscach i sposobach na znalezienie piosenek.
 Explanation-HowToInstall=Uruchamia stronę www z instrukcja instalacji piosenek.
 Explanation-AdditionalFolders=Jeśli masz zainstalowane inne instancje Stepmanii, możesz użyć opcji AdditionalFolder z pliku ustawień by załadować je bez konieczności ich kopiowania. 
@@ -216,3 +219,16 @@ V=V
 A=A
 F=F
 C=C
+
+[ScreenMapControllers]
+Exit=Exit
+
+[ScreenGameOver]
+GAME OVER=GAME OVER
+Play again soon!=Play again soon!
+
+[ScreenHowToPlay]
+How To Play StepMania=How To Play StepMania
+
+[Protiming]
+MS=MS
