Update in Polish translation.

--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -221,14 +221,14 @@ F=F
 C=C
 
 [ScreenMapControllers]
-Exit=Exit
+Exit=Wyjście
 
 [ScreenGameOver]
-GAME OVER=GAME OVER
-Play again soon!=Play again soon!
+GAME OVER=KONIEC GRY
+Play again soon!=Zagraj jeszcze raz!
 
 [ScreenHowToPlay]
-How To Play StepMania=How To Play StepMania
+How To Play StepMania=Jak Grać w Stepmanię
 
 [Protiming]
 MS=MS
