more changes to Hello World, this time laying down the foundation for Reference->Singletons/Managers

--- a/Themes/HelloWorld/Languages/en.ini
+++ b/Themes/HelloWorld/Languages/en.ini
@@ -61,3 +61,55 @@ SWMEDesc=A screen with menu elements. Most other screens are derived from this c
 
 Options=ScreenOptions
 OptionsDesc=An options screen with various rows.
+
+[ReferenceManagers]
+Header=Manager Reference
+Explanation=Anything that ends in "MAN" (and some things that don't).
+
+AnnouncerManager=AnnouncerManager (ANNOUNCER)
+AnnouncerManagerDesc=Handles announcers.
+
+CharacterManager=CharacterManager (CHARMAN)
+CharacterManagerDesc=Handles characters.
+
+FileManager=FileManager (FILEMAN)
+FileManagerDesc=Handles files.
+
+GameManager=GameManager (GAMEMAN)
+GameManagerDesc=Handles gametypes.
+
+GameSoundManager=GameSoundManager (SOUND)
+GameSoundManagerDesc=Handles game sounds.
+
+GameState=GameState (GAMESTATE)
+GameStateDesc=Handles the game state. You will want to know this.
+
+MemcardManager=MemoryCardManager (MEMCARDMAN)
+MemcardManagerDesc=Handles memory cards.
+
+MessageManager=MessageManager (MESSAGEMAN)
+MessageManagerDesc=Handles broadcasting messages.
+
+NoteskinManager=NoteSkinManager (NOTESKIN)
+NoteskinManagerDesc=Handles noteskins.
+
+PrefsManager=PreferencesManager (PREFSMAN)
+PrefsManagerDesc=Handles preferences.
+
+ProfileManager=ProfileManager (PROFILEMAN)
+ProfileManagerDesc=Handles profiles.
+
+ScreenManager=ScreenManager (SCREENMAN)
+ScreenManagerDesc=Handles screens.
+
+SongManager=SongManager (SONGMAN)
+SongManagerDesc=Handles songs.
+
+StatsManager=StatsManager (STATSMAN)
+StatsManagerDesc=Handles game statistics.
+
+ThemeManager=ThemeManager (THEME)
+ThemeManagerDesc=Handles the theme.
+
+UnlockManager=UnlockManager (UNLOCKMAN)
+UnlockManagerDesc=Handles unlocks.
