--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -109,7 +109,7 @@ TimingDisplay=Timing Display
 [OptionExplanations]
 AutoSetStyle=Allow the game to list all one player and two player modes at once instead of one style only. This might require a restart of StepMania (or press Shift+F2).
 NotePosition=Determines where the arrow receptors are placed in gameplay. 
-ComboOnRolls=Choose if rolls should increment the combo or not.
+ComboOnRolls=Choose if rolls should increment the combo or not. If you change this option, you will need to reload the metrics (via Shift+F2) for it to take effect.
 ComboUnderField=Determine if the combo should display under the notes or not.
 
 GameplayShowScore=Show or Hide the score display in gameplay.
