Add Techno Double 8...wait, what?!?
I don't recall Technomotion having this mode
for doubles play!

Did we borrow something from pyDance here?

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -2406,6 +2406,7 @@ Techno_Single5=Single 5
 Techno_Single8=Single 8
 Techno_Double4=Double 4
 Techno_Double5=Double 5
+Techno_Double8=Double 8
 Pnm_Five=5 Button
 Pnm_Nine=9 Button
 Guitar_Five=5 Frets
