--- a/Themes/default/Languages/nl.ini
+++ b/Themes/default/Languages/nl.ini
@@ -169,6 +169,7 @@ Techno_Single5=5
 Techno_Single8=8
 Techno_Double4=D4
 Techno_Double5=D5
+Techno_Double8=D8
 Pnm_Five=5
 Pnm_Nine=9
 Guitar_Five=5
