--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1180,7 +1180,25 @@ TapsAndHolds=TapsAndHolds
 Voltage=Voltage
 MinMidiNote=MinMidiNote
 MaxMidiNote=MaxMidiNote
-
+Lifts=Lifts
+Fakes=Fakes
+[RadarCategoryShort]
+Air=A
+Chaos=C
+Freeze=F
+Hands=Hands
+Holds=Holds
+Jumps=Jumps
+Mines=Mines
+Rolls=Rolls
+Stream=S
+Taps=Taps
+TapsAndHolds=Taps
+Voltage=V
+MinMidiNote=Min
+MaxMidiNote=Max
+Lifts=Lifts
+Fakes=Fakes
 [RageInput]
 No input devices were loaded.=No input devices were loaded.
 
