[ScreenOptionsMasterPrefs] Allow for FastLoadAdditionalSongs preference to be called via the "conf" command.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -378,6 +378,7 @@ EventMode=When set to &oq;ON&cq;, and you can continue playing forever.  Failing
 Exit=
 Fail=Fail
 FastLoad=If enabled, don't check songs for changes on load.
+FastLoadAdditionalSongs=If enabled, don't check songs for changes to Additional Songs on load.
 Fill Machine Stats=
 Game=Change the current game type with this option.
 GetRankingName=Determines if name entry should never be shown, always be shown, or shown when the course is listed on the high scores screen.
@@ -916,6 +917,7 @@ Exit=Exit
 Fail=Fail
 Fakes=Fakes
 FastLoad=Fast\nLoad
+FastLoadAdditionalSongs=Fast Load\nAdditional Songs
 File1 Global BGAnimation=File1 Global BGAnimation
 File1 Global Movie=File1 Global Movie
 File1 Global Movie (Group + Genre)=File1 Global Movie (Group + Genre)
