[ScreenEdit] New menu to modify attacks.
Check the Area Menu (Enter Key) to have fun.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -803,6 +803,8 @@ Off=Off
 Edit Courses/Mods=Edit Courses/Mods
 Accel=Acceleration
 Add/Edit Background Change=Add/Edit Background Change
+Add Attack=Add Attack
+Add Mod=Add Mod
 Air=Air
 AllowExtraStage=Allow Extra Stage
 AllowW1=Fantastic Timing
@@ -976,6 +978,7 @@ Mines=Mines
 Mirror Player 1 to 2=Mirror P1's notes to P2 (routine only)
 Mirror Player 2 to 1=Mirror P2's notes to P1 (routine only)
 Modify Keysounds at current beat=Modify keysounds at current beat
+Modify Attacks at current beat=Modify attacks at current beat
 MoveRandomToEnd=Random At&nbsp;End
 More Options=More Options
 MovieColorDepth=Movie Color
@@ -1041,6 +1044,7 @@ ScoringType=Scoring Type
 ScreenFilter=Screen Filter
 Scroll=Scroll
 Secret=Secret
+Secs Remaining=Seconds Remaining
 Server=Server
 Servers=Servers
 Set P1=Set P1
@@ -1064,6 +1068,7 @@ ShowSongOptions=Show Song Options
 ShowStats=Show Stats
 SmoothLines=SmoothLines
 SoundEffect=Sound Effect
+Starting Time=Starting Time
 StepMania Credits=StepMania Credits
 Center1Player=Center 1&nbsp;Player
 Song=Song
@@ -1308,6 +1313,11 @@ or=or
 Zoom In Camera=Zoom In Camera
 
 [ScreenEdit]
+Adding New Attack=Enter the new modifier for this attack.\nThe length can be adjusted later.\nLeave it blank to cancel.
+Adding New Mod=Please enter the new modifier for this attack.\n\nLeave it blank to cancel.
+Edit Existing Mod=Please adjust the present modifier below.\n\nLeave it blank to erase the mod.
+Edit Attack Start=Enter the time when this attack starts.
+Edit Attack Length=Enter how long it takes for this attack to finish.
 %s notes=%s notes
 Can't undo - no undo data.=Can't undo - no undo data.
 Do you want to revert from disk?=Do you want to revert from disk?
