[PrefsManager] Add StretchBackgrounds preference.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -466,6 +466,7 @@ SoundVolumeAttract=Adjust the volume level during attract mode.
 Speed=Speed
 StepMania Credits=The StepMania Development Team.
 Steps=Steps
+StretchBackgrounds=Toggle the stretching of backgrounds.
 Style=
 Test Input=Test the responsiveness of connected joysticks.
 Test Lights=Test the responsiveness of connected lights.
@@ -1083,6 +1084,7 @@ Speed=Speed
 Step Author=Step Author
 Steps=Steps
 Stream=Stream
+StretchBackgrounds=Stretch Backgrounds
 Style=Style
 Sub title=Sub title
 Sub title transliteration=Sub title transliteration
