Update in Polish translation

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -457,6 +457,7 @@ SoundVolumeAttract=Regulacja poziomu dźwięku w trybie demonstracji.
 Speed=Szybkość.
 StepMania Credits=Autorzy uczestniczący w tworzeniu programu.
 Steps=Kroki
+StretchBackgrounds=Włącza rozciąganie grafiki tła w piosenkach podczas gry.
 Style=
 Test Input=Test poprawności połączenia i mapowania mat, padów, joystików.
 Test Lights=Test poprawności podłączonych świateł.
@@ -1071,6 +1072,7 @@ Speed=Szybkość
 Step Author=Autor Kroków
 Steps=Poziom
 Stream=Strumień
+StretchBackgrounds=Rozciągaj Tła
 Style=Styl
 Sub title=Podtytuł
 Sub title transliteration=Transliteracja Podtytułu
