fix small typos

--- a/Themes/_fallback/Languages/ja.ini
+++ b/Themes/_fallback/Languages/ja.ini
@@ -503,7 +503,7 @@ Save=コースを保存します。
 Edit Course=コースを編集します。
 Shuffle=曲をシャッフルします。
 #
-GamePrefDefaultFail=ステージを強制終了するタイミングを設定します。通常は「Immidiate」で構いません。\nその他のオプションでは一曲プレイし続けられますが、ゲージが空になると\n「ImmidiateContinue」では回復しなくなり、「AtEnd」ではゲージが重くなります。
+GamePrefDefaultFail=ステージを強制終了するタイミングを設定します。通常は「Immediate」で構いません。\nその他のオプションでは一曲プレイし続けられますが、ゲージが空になると\n「ImmediateContinue」では回復しなくなり、「AtEnd」ではゲージが重くなります。
 #
 UserPrefScoringMode=スコアの計算方式を設定します。
 
