Quick options to report a bug, go on IRC

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1761,6 +1761,8 @@ Edit/Share=Edit/Share
 Exit=Exit
 Game Start=Game Start
 Jukebox=Jukebox
+Report Bug=Report A Bug!
+Chat on IRC=Chat on IRC!
 Select Game=Select Game
 Theme=Theme
 Credits=Credits
