update in polish translation.

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -1732,6 +1732,8 @@ Edit/Share=Edycja
 Exit=Wyjście
 Game Start=Start
 Jukebox=Odtwarzacz
+Report Bug=Zgłoś błąd!
+Chat on IRC=Dyskutuj na IRC!
 Select Game=Wybór trybu gry
 Theme=Motyw graficzny
 Credits=Autorzy
