A bunch of small changes that will hopefully let me close issue 176 once and for all.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -997,7 +997,7 @@ Paste at begin marker=Paste at begin marker
 Paste at current beat=Paste at current beat
 Paste timing data=Paste timing data
 Paste Partial Timing at current beat=Paste Partial Timing at current beat
-Persp=Persp
+Persp=Perspective
 Play current beat to end=Play current beat to end
 Play preview music=Play preview music
 Play whole song=Play whole song
