--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1244,6 +1244,7 @@ Players=Players
 Could not find '%s'.=Could not find '%s'.
 [Screen]
 HeaderText=
+HeaderSubText=
 [ScreenAppearanceOptions]
 HeaderText=Appearance
 HeaderSubText=Customize your game
@@ -1750,12 +1751,15 @@ AnswerCaret=_
 AnswerBlank= 
 
 [ScreenTitleMenu]
+# Old 3.9 Strings
 %d songs in %d groups=%d songs in %d groups
 %d courses in %d groups=%d courses in %d groups
 %d unlocks=%d unlocks
+# New Default Strings
 Gametype:=Gametype:
 Difficulty:=Difficulty:
 Announcer=Announcer
+# Choices
 Play Online=Network Play
 Edit/Share=Edit/Share
 Exit=Exit
