theme updates, made a few things faster; makes the game look far smoother than most people realize.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -431,6 +431,8 @@ Rate=Rate
 RefreshRate=Controls how many times per second the screen will refresh. Only has an effect when Display Mode is set to &oq;Full Screen&cq;.
 Reload Songs=Reload all songs and courses.
 Remove=Remove arrows to make the song easier.
+RemoveCombinations=Remove arrows to make the song easier.
+RemoveFeatures=Remove arrows to make the song easier.
 Rename=
 Reset To Defaults=Reset all options to default values.
 SaveScores=SaveScores
@@ -723,6 +725,8 @@ Ranking Songs=Ranking Songs
 Really Fast=Really Fast
 RegularCourses=Regular
 Remove=Remove
+RemoveCombinations=Remove
+RemoveFeatures=Remove
 Reverse=Reverse
 Right=Right
 Roll=Roll
@@ -1028,6 +1032,8 @@ Record in selection=Record in selection
 RefreshRate=Refresh Rate
 Reload Songs=Reload Songs/Courses
 Remove=Remove
+RemoveCombinations=Remove
+RemoveFeatures=
 Remove Change=Remove Change
 Remove Keysound=Remove Keysound
 Rename=Rename
