Improvements before branch

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1251,6 +1251,7 @@ Could not find '%s'.=Could not find '%s'.
 [Screen]
 HeaderText=
 HeaderSubText=
+HelpText=
 [ScreenAppearanceOptions]
 HeaderText=Appearance
 HeaderSubText=Customize your game
