--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -153,7 +153,13 @@ StrumDown=Strum Down
 Tilt=Tilt
 FootUpLeft=FootUpLeft
 FootUpRight=FootUpRight
+FootDownLeft=FootDownLeft
+FootDownRight=FootDownRight
 FootDown=FootDown
+HandUp=HandUp
+HandLeft=HandLeft
+HandRight=HandRight
+HandDown=HandDown
 HandUpLeft=HandUpLeft
 HandUpRight=HandUpRight
 HandLrLeft=HandLrLeft
