Pop'n Music Map Controller Support

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -164,6 +164,15 @@ HandUpLeft=HandUpLeft
 HandUpRight=HandUpRight
 HandLrLeft=HandLrLeft
 HandLrRight=HandLrRight
+Left White=Left White
+Left Yellow=Left Yellow
+Left Green=Left Green
+Left Blue=Left Blue
+Red=Red
+Right Blue=Right Blue
+Right Green=Right Green
+Right Yellow=Right Yellow
+Right White=Right White
 
 [GameCommand]
 Could not launch web browser.=Could not launch web browser.
