Upgraded the DirectX 8 rendering to DirectX 9. Updated Direct Input to work with the latest SDK as well.

--- a/Themes/_fallback/Languages/es.ini
+++ b/Themes/_fallback/Languages/es.ini
@@ -1983,7 +1983,7 @@ Obtain an updated driver from your video card manufacturer.=Obtain an updated dr
 GLDirect was detected.  GLDirect is not compatible with this game and should be disabled.=GLDirect was detected.  GLDirect is not compatible with this game and should be disabled.
 
 [RageDisplay_D3D]
-DirectX 8.1 or greater is not installed.  You can download it from:=DirectX 8.1 or greater is not installed.  You can download it from:
+DirectX 9.0c or greater is not installed.  You can download it from:=DirectX 9.0c or greater is not installed.  You can download it from:
 Your system is reporting that Direct3D hardware acceleration is not available.  Please obtain an updated driver from your video card manufacturer.=Your system is reporting that Direct3D hardware acceleration is not available.  Please obtain an updated driver from your video card manufacturer.
 
 [RageDisplay]
