--- a/Themes/_fallback/Languages/nl.ini
+++ b/Themes/_fallback/Languages/nl.ini
@@ -1984,7 +1984,7 @@ Obtain an updated driver from your video card manufacturer.=Haal een beter stuur
 GLDirect was detected.  GLDirect is not compatible with this game and should be disabled.=GLDirect was gedetecteerd. GLDirect werkt niet met dit spel en moet worden uitgezet. 
 
 [RageDisplay_D3D]
-DirectX 8.1 or greater is not installed.  You can download it from:=DirectX 8.1 of hoger is niet geinstaleerd.  je kan het downloaden van:
+DirectX 9.0c or greater is not installed.  You can download it from:=DirectX 9.0c of hoger is niet geinstaleerd.  je kan het downloaden van:
 Your system is reporting that Direct3D hardware acceleration is not available.  Please obtain an updated driver from your video card manufacturer.=Je systeem rapporteert dat de Direct3D hardware versnelling niet beschikbaar is.  Haal een beter stuurprogramma bij je videokaart producent.
 
 [RageDisplay]
