--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -2000,7 +2000,7 @@ Obtain an updated driver from your video card manufacturer.=Zdobądź aktualny s
 GLDirect was detected.  GLDirect is not compatible with this game and should be disabled.=Wykryto GLDirect.  GLDirect nie jest kompatybilny z tą grą i powinien zostać wyłączony.
 
 [RageDisplay_D3D]
-DirectX 8.1 or greater is not installed.  You can download it from:=Brak zainstalowanego DirectX 8.1 (lub wyższego). Można go pobrać z:
+DirectX 9.0c or greater is not installed.  You can download it from:=Brak zainstalowanego DirectX 9.0c (lub wyższego). Można go pobrać z:
 Your system is reporting that Direct3D hardware acceleration is not available.  Please obtain an updated driver from your video card manufacturer.=Twój system raportuje brak dostępnej akceleracji Direct3D. Zdobądź aktualny sterownik od producenta twojej karty graficznej.
 
 [RageDisplay]
