Fix up theme a little. Sorry about the head clobber. ~ [ScreenSelectMusic] Change CDTitle Display. ~ [ScreenSelectPlayMode] Change icons due to ActorFrame propagation. - [ScreenSelectPlayStyle] Remove couple, routine. These cause crashes. - [ScreenOptionsArcade] Remove Premium choice. Requests lang strings that don't exist.

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -19,7 +19,7 @@ TimingDifficulty=Timing Difficulty: %s
 [ScreenTitleJoin]
 HelpText=Press &START; to Play
 HelpTextJoin=Press &START; to Play
-HelpTextWait=Insert Credits...
+HelpTextWait=Insert Credits!
 EventMode=Event Mode
 JointPremiumMain=Joint Premium
 JointPremiumSecondary=Two players can play with one credit!
