--- a/Themes/_fallback/Languages/es.ini
+++ b/Themes/_fallback/Languages/es.ini
@@ -5,6 +5,7 @@ StepMania=StepMania
 [LoadingWindow]
 Couldn't open any loading windows.=Couldn't open any loading windows.
 Starting sound subsystem...=Starting sound subsystem...
+Initializing bookkeeper...=Initializing bookkeeper...
 Starting lights subsystem...=Starting lights subsystem...
 Loading game type...=Loading game type...
 Building song cache index...=Building song cache index...
@@ -332,10 +333,12 @@ BGBrightness=Controls how bright the background will appear. Turn this setting d
 Background=Change options that control the backgrounds that play during gameplay.
 BarDrain=BarDrain
 BatLives=BatLives
+Bookkeeping=Check coin drop statistics.
 Calibrate Machine Sync=Calibrate the audio synchronization.
 CelShadeModels=Choose if dancing characters are drawn with cel shading.
 Center Image=Center the image on your monitor.
 Characters=Characters
+Clear Bookkeeping Data=Clear all coin drop data.
 Clear Machine Edits=Save all step edits saved to this machine.
 Clear USB edits=Clear USB edits
 Clear Machine Stats=Clear all scores saved to this machine.
@@ -820,6 +823,7 @@ BarDrain=Bar Drain
 BatLives=Bat Lives
 Base Difficulty=Base Difficulty
 Beat 0 Offset=Beat 0 Offset
+Bookkeeping=Bookkeeping
 Calibrate Machine Sync=Calibrate Audio Sync
 CPUSkill=CPU Skill
 CelShadeModels=Cel-shaded Models
@@ -829,6 +833,7 @@ Characters=Characters
 Chart Name=Chart Name
 Chart Style=Chart Style
 Choose=Choose
+Clear Bookkeeping Data=Clear Bookkeeping Data
 Clear Machine Edits=Clear Machine Edits
 Clear Machine Stats=Clear Machine Scores
 Clear USB edits=Clear USB edits
@@ -1218,6 +1223,15 @@ HeaderSubText=Get the best performance
 HeaderText=Advanced Options
 HeaderSubText=These settings are for advanced users
 
+[ScreenBookkeeping]
+All-time Coin Total:=All-time Coin Total:
+Total Song Plays: %d=Total Song Plays: %d
+Coin Data by Day of Week, All-Time=Coin Data by Day of Week, All-Time
+Coin Data by Hour of Day, All-Time=Coin Data by Hour of Day, All-Time
+Coin Data of Last %d Days=Coin Data of Last %d Days
+Coin Data of Last %d Weeks=Coin Data of Last %d Weeks
+HeaderText=Bookkeeping
+
 [ScreenCaution]
 Caution=¡ADVERTENCIA!
 CautionText=Mantén la plataforma de baile a una distancia segura del monitor y muebles.\n\nTen cuidado para no hacer daño a mascotas, niños o espectadores mientras bailas.
@@ -1567,6 +1581,7 @@ HelpTextTextEntry=Type a value using the keyboard.  Press Enter to finish.
 HelpTextMapControllers=Use arrow keys to move, ENTER to assign, SPACE to clear::Press ESCAPE when done
 HelpTextOnline=smonline.us to connect to official Stepmania Online Server::Check out Stepmaniaonline.com for more information
 HelpTextNetSelectMusic=Ctrl + Enter to enter room/select song::&UP; for Player Options
+HelpTextBookkeeping=Press &MENULEFT;&MENURIGHT; to cycle data.  Press ESCAPE when done.
 
 [ScreenSelectGame]
 HeaderText=Seleccionar Juego
@@ -1606,6 +1621,7 @@ HeaderSubText=Let's get started.  I know you can!
 %d edits cleared, %d errors.=%d edits cleared, %d errors.
 %d failed=%d failed
 %d ignored=%d ignored
+Bookkeeping data cleared.=Bookkeeping data cleared.
 Copied from P%d card:=Copied from P%d card:
 Copied to P%d card:=Copied to P%d card:
 Edits not cleared - No memory cards ready.=Edits not cleared - No memory cards ready.
