Hide unneeded pay-related theme elements
Can't remove these entirely in case other themes expect them.

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -337,8 +337,8 @@ Clear Bookkeeping Data=Zerowanie statystyk wrzuconych żetonów/monet/kredytów.
 Clear Machine Edits=Usunięcie wszystkich edycji kroków wgranych na maszynę.
 Clear USB edits=Zerowanie plików programu na pamięci USB
 Clear Machine Stats=Usunięcie wszystkich statystyk zapisanych na maszynie.
-CoinMode=&oq;DOM&cq;: Opcje dostępne na ekranie tytułowym. &oq;PŁATNY&cq;: Opcje są ukryte. By zagrać trzeba wrzucić kredyt. &oq;GRA DARMOWA&cq;: Opcje są ukryte. Nie trzeba wrzucać kredytu by zagrać.
-CoinModeNoHome=Kiedy tryb jest ustawiony na PŁATNY by zagrać należy wrzucić kredyt. Kiedy tryb jest ustawinye na GRA DARMOWA można grać bez wrzucania kredytu.
+CoinMode=&oq;DOM&cq;: Opcje dostępne na ekranie tytułowym. &oq;GRA DARMOWA&cq;: Opcje są ukryte.
+CoinModeNoHome=Kiedy tryb jest ustawinye na GRA DARMOWA można grać bez wrzucania kredytu.
 CoinsPerCredit=Liczba kredytów które muszą być wrzucone by móc zagrać (w trakcie trybu PŁATNY)
 Connection=Połącz z serwerem 
 CourseSortOrder=Określa sposób sortowania Maratonów.
