Fix ScreenJukebox when there are no matching steps
Also makes minor tweaks to the SetSong function and adds a SystemMessage to
display that no steps have been found.  When this happens, the ScreenJukebox
will return to its PrevScreen.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1494,6 +1494,9 @@ PlayMode_Battle instructions=
 Hold instructions=Hold arrows are arrows that you must keep held down. A successfully held down hold arrow will give you an OK while a missed hold arrow will give you an NG.
 Mine instructions=Mines are explosive and should be avoided at all costs as they will take life off of your meter. They will trigger if you keep your foot held down as they pass.
 
+[ScreenJukebox]
+NoMatchingSteps=No matching steps found.
+
 [ScreenLegal]
 Warning=Warning
 BodyText=The StepMania program source code is licensed under a permissive open-source license.\n\nThe StepMania name and logos are protected by Trademark law.\n\nThe StepMania default theme SOUNDS ARE SEPARATELY OWNED BY THE AUTHORS.  ALL OTHER THEME COMPONENTS ARE LICENSED UNDER THE STEPMANIA LICENSE.\n\nSee license.txt for details.
