Revert "Hide unneeded pay-related theme elements"
This reverts commit 0dc30d32b4d10257b7ed5f9338c67f89e26742a2.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -359,8 +359,8 @@ Clear Bookkeeping Data=Clear all coin drop data.
 Clear Machine Edits=Save all step edits saved to this machine.
 Clear USB edits=Clear USB edits
 Clear Machine Stats=Clear all scores saved to this machine.
-CoinMode=&oq;Home&cq;: Options are shown on the Title Menu. &oq;Free Play&cq;: Title Menu choices are hidden.
-CoinModeNoHome=When set to FREE you can join in without inserting coins.
+CoinMode=&oq;Home&cq;: Options are shown on the Title Menu. &oq;Pay&cq;: Title Menu choices are hidden; must insert coins before playing. &oq;Free Play&cq;: Title Menu choices are hidden; Play without inserting coins.
+CoinModeNoHome=When set to PAY you must insert coins before joining in.  When set to FREE you can join in without inserting coins.
 CoinsPerCredit=The number of coins that must be inserted before a player can join. (when Coin Mode = Pay)
 Connection=Connect to Server (To be specified)
 CourseSortOrder=Determines how courses are sorted.
