--- a/Themes/_fallback/Languages/nl.ini
+++ b/Themes/_fallback/Languages/nl.ini
@@ -340,8 +340,8 @@ Clear Bookkeeping Data=Verwijder alle munt invoer data.
 Clear Machine Edits=Sla alle stap wijzigingen op voor dit apparaat.
 Clear USB edits=Verwijder alle USB wijzigingen.
 Clear Machine Stats=Verwijder alle ranglijsten van deze machine.
-CoinMode=&oq;Begin&cq;: Opties zijn zichtbaar op het Titel Menu. &oq;Free Play&cq;: Titel Menu opties zijn verborgen.
-CoinModeNoHome=Als het op GRATIS staat kan je zonder munt mee doen.
+CoinMode=&oq;Begin&cq;: Opties zijn zichtbaar op het Titel Menu. &oq;Pay&cq;: Titel Menu opties zijn verborgen; munt inwerpen voor je kan spelen. &oq;Free Play&cq;: Titel Menu opties zijn verborgen; Speel zonder munten.
+CoinModeNoHome=Als het op BETALEN staat moet je een munt ingooien voor je kan meedoen. Als het op GRATIS staat kan je zonder munt mee doen.
 CoinsPerCredit=Het aantal munten dat moet worden ingevoerd voor een speler mag meedoen. (als Munt Mode = Betalen)
 Connection=Verbind met Server (Word nog gespecificeerd)
 CourseSortOrder=Bepaald hoe Parkoers worden gesorteerd.
